// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Head renders 1`] = `
<head>
  <meta
    charSet="UTF-8"
  />
  <title>
    some title preface
     automated checks result
  </title>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "<<CSS:../reports/automated-checks-report.css>>",
      }
    }
  />
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": "<<CSS:detailsView.css>>",
      }
    }
  />
</head>
`;

exports[`ReporterHead renders 1`] = `
<Head
  titlePreface="Accessibility Insights"
/>
`;

exports[`WebReportHead renders 1`] = `
<Head
  titlePreface="Accessibility Insights for Web"
/>
`;
